3.0.0 - Architectury Abstraction Most of the changes in this update are internal changes, with no visible effect to the average user. ### User-facing changes - **No longer** requires *Architectury API* to run, just Cobblemon! - added a new Parameter Set type to Loot Tables, `releaserewards:player_and_pokemon`. Using this Param Set as the "type" in a Loot Table will prevent Validation Errors in the log when using Parting Gifts features in the table.
### Nerd Stuff
- Changed registry system from Architectury's `DeferredRegister` to Cobblemon's own `PlatformRegistry` system. the Mod classes now have a notable amount of code to handle platform-specific Registry.
- renamed `ReleaseRewardsCommon` to `ReleaseRewards`, and added `ResourceLocation resource(String)` helper method.
- renamed `ModLootModifiers` to `ModLootFunctions`.

Signed-off-by: anabsolutesloth <63694982+anabsolutesloth@users.noreply.github.com>